--- a/app/src/main/res/layout/list_item_day.xml
+++ b/app/src/main/res/layout/list_item_day.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:gravity="center_vertical"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:gravity="center"
     android:id="@+id/list_item_day_textview" />
