Fragment title shows current date

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity$DayFragment">
 
     <TextView
+        android:id="@+id/datetext_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Today"
@@ -16,7 +17,7 @@
         android:gravity="center"
         />
     <ListView
-        android:id="@+id/listview_today"
+        android:id="@+id/listview_day"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"/>
